--- a/style/home.css
+++ b/style/home.css
@@ -53,3 +53,56 @@ margin-bottom: 0;
 .banner-content{
     max-width: 700px;
 }
+.about{
+    padding: 100px;
+background-color:rgba(235, 203, 203, 0.482) ;
+border-radius: 10px;
+margin: 130px 0;
+}
+.about-title{
+    text-align: center;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: normal;
+}
+.about-detail{
+    text-align: center;
+    font-size: 18px;
+}
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+.about-container{
+    display: flex;
+    text-align: center;
+    justify-content: space-around;
+}
+.info-description{
+    font-weight: 600;
+    margin-top: 5px;
+}
+#i-do{
+    padding: 30px 140px;
+}
+.skill-container{
+    display: flex;
+    
+}
+.skill{
+    padding: 30px;
+    margin: 10px;
+    gap: 24px;
+    border-radius: 5px;
+    background: white;
+    box-shadow: 0px 6px 50px 0px rgb(241, 229, 208);
+}
+.skill-description{
+    color: rgb(100, 88, 88);
+font-size: 15px;
+}
+.resume-colum-title{
+   
+    font-weight: 700;
+ 
+}
